fixed issue of nav buttons going off screen (i hope)

--- a/healthtech-web/src/App.css
+++ b/healthtech-web/src/App.css
@@ -9,8 +9,8 @@
 
 .navs {
     width: 100vw;
-    /*height: 80px;*/
-    margin: 12% auto;
+    height: 100%;
+    margin: 10vh auto;
     text-align: center;
     align-content: center;
     justify-content: center;
